--- a/web/resources/css/profile.css
+++ b/web/resources/css/profile.css
@@ -25,7 +25,7 @@ and open the template in the editor.
 }
 
 header
-{
+{ 
     grid-area: head;
     background-color: lightgray;
 }
@@ -91,7 +91,6 @@ footer
 
 .content
 {
-    
     grid-column: 1 / -1;
 }
 
@@ -120,11 +119,39 @@ footer
     padding: 5px;
     background-color: lightgray;
     display: grid;
-    grid-gap: 5px;
+    grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 100px;
-    
+    grid-template-rows: minmax(80px, auto) minmax(40px,auto);   
 }
+
+.post > .user 
+{
+    grid-column: 1 / -1;
+    grid-row: 1;
+    width: 100%;
+    background-color: white;
+}
+
+.user > .profilepic
+{
+    float: left;
+    background-color: gray;
+    width: 100px;
+    height: 100%;
+}
+
+.post > .content
+{
+    background-color: #666666;
+}
+
+.post > .timestamp
+{
+    text-align: right;
+    grid-column: 4;
+    grid-row: 1;
+}
+/*-----------------------------------------------------------------*/
 input[type=submit]
 {
     width: 100%;
