--- a/web/resources/css/profile.css
+++ b/web/resources/css/profile.css
@@ -37,9 +37,11 @@ header
     height: 40px;
     z-index: 1;
     grid-area: head;
-    background-color: darkgray;
+    background-color: lightgray;
     display: grid;
     grid-template-columns: repeat(11, 1fr);
+    color:#31708F;
+    text-align: center;
 }
 
 header > .searchbar
@@ -148,6 +150,14 @@ footer
     background-color: darkgray;
 }
 
+.like-button > input[type=submit]:hover
+{
+    background-color: darkgray;
+}
+.comment-button > input[type=submit]:hover
+{
+    background-color: darkgray;
+}
 /*------------------------------------------------------------*/
 
 .post
@@ -197,10 +207,7 @@ input[type=submit]
     font-size: 15px;
 }
 
-input[type=submit]:hover
-{
-    background-color: darkgray;
-}
+
 
 input
 {
@@ -209,3 +216,21 @@ input
     padding: 5px;
     font-size: 15px;
 }
+.sidebarbutton{
+       
+    background-color: #31708F;
+    border: solid 1px black;
+    border-radius: 50%;
+    color: white;
+    padding: 7px 17px;
+    text-align: center;
+    display: inline-block;
+    font-size: 14px;
+}
+
+.sidebarbutton:hover {
+    background-color: white; 
+    color: #31708F;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
