--- a/web/resources/css/profile.css
+++ b/web/resources/css/profile.css
@@ -105,6 +105,7 @@ footer
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     display: grid;
     padding: 5px;
+    margin: 0px;
     grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr 1fr;  
     grid-template-rows: auto auto auto;
@@ -130,12 +131,14 @@ footer
 
 .content > input
 {
-    padding: 7px;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .post-button
 {
     grid-column: span 2;
+    margin-bottom: 2px;
 }
 
 .post-button > input[type=submit]
@@ -144,6 +147,7 @@ footer
     border: none;
     padding: 5px;
     font-size: 15px;
+    border-radius: 5px;
 }
 
 .post-button > input[type=submit]:hover
@@ -151,14 +155,6 @@ footer
     background-color: #666666;
 }
 
-.like-button > input[type=submit]:hover
-{
-    background-color: #666666;
-}
-.comment-button > input[type=submit]:hover
-{
-    background-color: #666666;
-}
 /*------------------------------------------------------------*/
 
 .post
@@ -169,27 +165,32 @@ footer
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: minmax(80px, auto) minmax(40px,auto);   
+    grid-template-rows: minmax(80px, auto) minmax(40px, auto);   
 }
 
-.post > .user 
+.post-wrapper
 {
     grid-column: 1 / -1;
-    grid-row: 1;
-    width: 100%;
-    background-color: white;
+    margin: 0px;
+    padding: 5px;
+    background-color: lightgray;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+    border-radius: 5px;
+    font-size: 20px;
 }
 
-.user > .profilepic
-{
-    float: left;
+.post-wrapper > .profilepic-post
+{ 
     background-color: gray;
-    width: 100px;
-    height: 100%;
+    
+    border-radius: 5px;
 }
 
-.post > .content
+.post-content
 {
+    grid-column: span 3;
     background-color: lightgray;
     font-size: 20px;
     padding: 5px;
@@ -200,6 +201,156 @@ footer
     text-align: right;
     grid-column: 4;
     grid-row: 1;
+}
+
+.like-button
+{
+    grid-column: span 2;
+    margin-bottom: 2px;
+}
+
+.like-button > input
+{
+    width: 100%;
+    border: none;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 5px;
+    transition: 0.2s ease-out;
+}
+
+.like-button > input[type=submit]:hover
+{
+    background-color: #666666;
+}
+
+.view-button
+{
+    grid-column: span 2;
+    /* margin-right: 5px; */
+}
+
+.view-button > input
+{
+    width: 100%;
+    border: none;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 5px;
+    transition: 0.2s ease-out;
+}
+
+.view-button > input[type=submit]:hover
+{
+    background-color: #666666;
+}
+/*-----------------------------------------------------------------*/
+ 
+.comment
+{
+    margin: 0px;
+    grid-column: 1 / -1;
+    background-color: #31708F;
+    opacity: .5;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.filler-grid
+{
+    margin: 0px;
+    padding: 0px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+}
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    font-size: 15px;
+    transition: 0.4s;
+    width: 100%;
+    border: none;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 5px;
+    margin-top: 2px;
+}
+
+.active, .accordion:hover {
+    background-color: #ccc;
+}
+
+.panel {
+    margin: 0px;
+    padding: 0px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    grid-column: auto;
+    border-radius: 15px;
+    font-size: 15px  
+}
+
+.datatable
+{
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.comment-grid
+{
+    margin: 0px;
+    padding: 0px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    justify-items: start;
+}
+
+.comment-input-grid
+{
+    margin: 0px;
+    padding: 0px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+}
+
+.comment-content
+{
+    grid-column: auto;
+    background-color: white;
+    border-radius: 15px;
+    padding: 5px 10px 5px 10px;
+    font-size: 15px     
+}
+
+.input-comment
+{
+    grid-column: span 5;
+    width: 100%;
+    border-radius: 15px;
+    padding: 5px 10px 5px 10px;
+    margin-bottom: 2px;
+}
+
+.comment-button > input
+{
+    width: 100%;
+    border: none;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 5px;
+    transition: 0.2s ease-out;
+}
+
+.comment-button > input[type=submit]:hover
+{
+    background-color: #666666;
 }
 /*-----------------------------------------------------------------*/
 input[type=submit]
@@ -217,6 +368,7 @@ input
     padding: 5px;
     font-size: 15px;
 }
+
 .sidebarbutton{
        
     background-color: #31708F;
@@ -234,3 +386,6 @@ input
     color: #31708F;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+
+
