--- a/web/resources/css/profile.css
+++ b/web/resources/css/profile.css
@@ -65,18 +65,30 @@ feed
 
 aside
 {
-    /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
     text-align: center;
     grid-area: sidebar;
     background-color: #aaaaa;
+    margin: 0px;
+    padding: 0px;
+/*    position: fixed;*/
+}
+
+#sidebar
+{
+    padding: 0px;
+    margin: 0px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
 }
 
 aside2
 {
-    /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
     text-align: center;
     grid-area: sidebar2;
     background-color: #aaaaa;
+/*    position: fixed;*/
+    
 }
 
 footer
@@ -91,7 +103,7 @@ footer
 
 .feed-grid
 {
-    padding: 5px;
+    padding: 0px;
     display: grid;
     grid-row-gap: 20px;
     grid-template-columns: 1fr;
@@ -159,6 +171,7 @@ footer
 
 .post
 {
+/*    align-self: start;*/
     padding: 5px;
     background-color: darkgray;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -183,8 +196,8 @@ footer
 
 .post-wrapper > .profilepic-post
 { 
-    background-color: gray;
-    
+    margin: 0px;
+    padding: 0px;
     border-radius: 5px;
 }
 
@@ -194,6 +207,9 @@ footer
     background-color: lightgray;
     font-size: 20px;
     padding: 5px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
 }
 
 .post > .timestamp
@@ -369,6 +385,14 @@ input
     font-size: 15px;
 }
 
+.sidebar-buttons
+{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+}
 .sidebarbutton{
        
     background-color: #31708F;
@@ -387,5 +411,57 @@ input
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+.profilepic
+{
+    margin: 0px;
+    padding: 0px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
 
+.sidebar-2
+{
+    padding: 10px;
+    margin: 0px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
 
+.featured
+{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.upload-button
+{
+    width: 100%;
+    border: none;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 5px;
+    transition: 0.2s ease-out;
+}
+
+.upload-button:hover
+{
+    background-color: #666666
+}
+
+.choose
+{
+    grid-column: 1 / -1;
+}
+
+.fileupload_buttonbar
+{
+    background: transparent none;
+    border: none;
+}
+
+.fileupload-content
+{
+    display: none;
+}
+
+.ui-fileupload .fileinput-button
+{
+    grid-column: 1 / -1;
+}
