--- a/web/resources/css/profile.css
+++ b/web/resources/css/profile.css
@@ -120,6 +120,7 @@ footer
 
 .status
 {
+    grid-column: 100px;
     background-color:  #a0cade;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     display: grid;
