--- a/web/resources/css/profile.css
+++ b/web/resources/css/profile.css
@@ -158,7 +158,7 @@ footer
 
 .post-button
 {
-    grid-column: span 2;
+    grid-column: 1 / -1;
     margin-bottom: 2px;
 }
 
@@ -195,7 +195,7 @@ footer
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: minmax(80px, auto) minmax(40px, auto);   
+    grid-suto-rows: minmax(40px, auto);   
 }
 
 .post-wrapper
