--- a/web/resources/css/profile.css
+++ b/web/resources/css/profile.css
@@ -117,7 +117,12 @@ footer
 }
 
 /*----------------------------------------------------------------------*/
-
+.feed-header
+{
+    grid-column: 1 / -1;
+    background-color: #a0cade;
+    padding: 5px;
+}
 .status
 {
     grid-column: 100px;
